social links update

--- a/index.html
+++ b/index.html
@@ -184,8 +184,10 @@
                                     src="icons/instagram.svg" alt=""></a>
                             <a class="w-6" href="https://www.tiktok.com/@pasibus" target="_blank"><img
                                     src="icons/tik-tok.svg" alt=""></a>
-                            <!-- <a class="w-6" href="https://twitter.com/pasibus" target="_blank"><img src="icons/x.svg" alt=""></a> -->
-                            <!-- <a class="w-6" href="https://www.threads.net/@pasibus" target="_blank"><img src="icons/threads.svg" alt=""></a> -->
+                            <a class="w-6" href="https://twitter.com/pasibus" target="_blank"><img src="icons/x.svg"
+                                    alt=""></a>
+                            <a class="w-6" href="https://www.threads.net/@pasibus" target="_blank"><img
+                                    src="icons/threads.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="flex space-x-2">
@@ -240,8 +242,10 @@
                                     src="icons/instagram_large.png" alt=""></a>
                             <a href="https://www.tiktok.com/@pasibus" target="_blank"><img src="icons/tik-tok_large.png"
                                     alt=""></a>
-                            <!-- <a href="https://twitter.com/pasibus" target="_blank"><img src="icons/x_large.png" alt=""></a> -->
-                            <!-- <a href="https://www.threads.net/@pasibus" target="_blank"><img src="icons/threads_large.png" alt=""></a> -->
+                            <a href="https://twitter.com/pasibus" target="_blank"><img src="icons/x_large.png"
+                                    alt=""></a>
+                            <a href="https://www.threads.net/@pasibus" target="_blank"><img
+                                    src="icons/threads_large.png" alt=""></a>
                         </div>
                     </div>
                     <div class="flex space-x-2">
@@ -286,9 +290,11 @@
                     src="icons/instagram.svg" alt=""></a>
             <a class="w-6 sm:w-12" href="https://www.tiktok.com/@pasibus" target="_blank"><img src="icons/tik-tok.svg"
                     alt=""></a>
-            <!-- <a class="w-6 sm:w-12" href="https://twitter.com/pasibus" target="_blank"><img src="icons/x.svg" alt=""></a> -->
-            <!-- <a class="w-6 sm:w-12" href="https://www.threads.net/@pasibus" target="_blank"><img src="icons/threads.svg" alt=""></a> -->
-            <!-- <a class="w-6 sm:w-12" href="https://pl.linkedin.com/company/pasibuspl" target="_blank"><img src="icons/linkedin.svg" alt=""></a> -->
+            <a class="w-6 sm:w-12" href="https://twitter.com/pasibus" target="_blank"><img src="icons/x.svg" alt=""></a>
+            <a class="w-6 sm:w-12" href="https://www.threads.net/@pasibus" target="_blank"><img src="icons/threads.svg"
+                    alt=""></a>
+            <a class="w-6 sm:w-12" href="https://pl.linkedin.com/company/pasibuspl" target="_blank"><img
+                    src="icons/linkedin.svg" alt=""></a>
         </div>
         <div class="flex flex-col sm:flex-row text-xs sm:text-xl items-center">
             <p>© Pasibus 2024</p>
