--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
                     <div>
                         <a target="_blank" class="hover:opacity-80"
                             href="https://play.google.com/store/apps/details?id=com.pasibus.loyalty">
-                            <img class="w-32 xl:w-40 2xl:w-48" src="images/button_google_play.png" alt="">
+                            <img class="w-32 xl:w-40 2xl:w-48" src="images/button_app_store.png" alt="">
                         </a>
                     </div>
                     <div>
                         <a target="_blank" class="hover:opacity-80"
                             href="https://apps.apple.com/pl/app/pasibus/id6446946441">
-                            <img class="w-32 xl:w-40 2xl:w-48" src="images/button_app_store.png" alt="">
+                            <img class="w-32 xl:w-40 2xl:w-48" src="images/button_google_play.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -127,13 +127,13 @@
                     <div>
                         <a target="_blank" class="hover:opacity-80"
                             href="https://play.google.com/store/apps/details?id=com.pasibus.loyalty">
-                            <img class="w-32 sm:w-40x sm:w-48" src="images/button_google_play.png" alt="">
+                            <img class="w-32 sm:w-40x sm:w-48" src="images/button_app_store.png" alt="">
                         </a>
                     </div>
                     <div>
                         <a target="_blank" class="hover:opacity-80"
                             href="https://apps.apple.com/pl/app/pasibus/id6446946441">
-                            <img class="w-32 sm:w-40x sm:w-48" src="images/button_app_store.png" alt="">
+                            <img class="w-32 sm:w-40x sm:w-48" src="images/button_google_play.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
             <!-- end video mobile -->
         </div>
         <div class="relative">
-            <img class="hidden md:block w-full " src="images/frame_2.png" alt="">
+            <!-- <img class="hidden md:block w-full " src="images/frame_2.png" alt=""> -->
 
             
             
