--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Pasibus Avenida Poznań</title>
+    <title>Pasibus Zote Tarasy Warszawa</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -82,7 +82,7 @@
             <!-- <img class="block md:hidden w-full" src="images/frame_1_mobile.png" alt=""> -->
             <img class="block md:hidden w-full" src="images/frame_1_2_zlote_mobile.png" alt="">
             <!-- regulamin -->
-            <div class="hidden md:block absolute left-0 bottom-0 right-0 w-2/3 h-1/2 mx-auto xbg-red-500 pt-6">
+            <!-- <div class="hidden md:block absolute left-0 bottom-0 right-0 w-2/3 h-1/2 mx-auto xbg-red-500 pt-6">
                 <div class="flex gap-8 xl:gap-10 2xl:gap-12 justify-start mt-20 xl:mt-48">
                     <a href="https://pasibus.pl/pl/regulaminy/"
                         class="flex gap-2 montserrat-bold items-center uppercase text-sm lg:text-lg xxl:text-lg 2xl:text-xl">
@@ -99,7 +99,7 @@
                         <img class="h-5 lg:h-6" src="icons/arrow_icon.svg" alt="">
                     </a>
                 </div>
-            </div>
+            </div> -->
             <!-- end regulamin -->
 
             <!-- app -->
